Walkscore on mobile Iphone and Android. https://github.com/UsabilityDynamics/www.reddoorcompany.com/issues/539

--- a/wp-content/themes/wp-reddoor/static/styles/src/content.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/content.less
@@ -1901,8 +1901,8 @@ input[type="checkbox"].styled-checkbox-radio:checked + label::before, input[type
       height: 420px;
       background: url('../images/src/ajax-loader.gif') no-repeat scroll center center;
       .tab-pane{
-        frame{
-          background: #fff none repeat scroll 0 0;
+        iframe{
+          background: #fff none repeat scroll 0 0 !important;
         }
       }
     }
